--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -13,17 +13,20 @@
     transform: translate(-50%, -50%);
     z-index: 1;
 }
+
 .image-blue {
     display: flex;
     position: absolute;
     top: 200px;
     left: 0px;
 }
+
 .image-email-login {
     position: absolute;
     right: 1%;
     left: 350px;
-    -webkit-transform: translate(0, -90%); /*aqui es pr imagenes svg*/
+    -webkit-transform: translate(0, -90%);
+    /*aqui es pr imagenes svg*/
     transform: translate(0, -10%);
     z-index: 1;
 }
@@ -35,6 +38,7 @@
     transform: translate(0, -100%);
     left: 0;
 }
+
 .image-pink-fondo {
     position: absolute;
     top: 200px;
@@ -42,22 +46,27 @@
     transform: translate(0, 500%);
     left: 0;
 }
+
 .image-blue-login {
     position: relative;
     border-radius: 15px;
     top: 0px;
-    -webkit-transform: translate(0, -100%); /*aqui es pr imagenes svg*/
+    -webkit-transform: translate(0, -100%);
+    /*aqui es pr imagenes svg*/
     transform: translate(0, -0%);
     right: 15px;
 }
+
 .logo {
     position: absolute;
     left: 200px;
     right: 33%;
     top: 0px;
-    -webkit-transform: translate(0, -100%); /*aqui es pr imagenes svg*/
+    -webkit-transform: translate(0, -100%);
+    /*aqui es pr imagenes svg*/
     transform: translate(0, 50%);
 }
+
 .fondo-BO {
     background: url("/backoffice/public/images/claro-networks-portada.jpg");
     background-position: center;
@@ -66,6 +75,7 @@
     background-size: cover;
     overflow-y: hidden !important;
 }
+
 .image-email {
     position: absolute;
     right: 1%;
@@ -73,6 +83,7 @@
     transform: translate(0, 2000%);
     z-index: 1;
 }
+
 .icon-eye {
     position: absolute;
     right: 0%;
@@ -82,6 +93,7 @@
     transform: translate(0px, -50%);
     width: 35px;
 }
+
 .icon-eye3 {
     position: absolute;
     opacity: 0.3;
@@ -89,6 +101,7 @@
     top: 150px;
     width: 35px;
 }
+
 .image-ta {
     width: 113px;
     height: 63px;
@@ -124,6 +137,7 @@
     z-index: 2;
     border-radius: 21px;
 }
+
 .equis1 {
     width: 39px;
     position: absolute;
@@ -135,6 +149,7 @@
     z-index: 2;
     border-radius: 21px;
 }
+
 .equis2 {
     width: 39px;
     position: absolute;
@@ -198,11 +213,13 @@
 .modal-privilege-icon {
     width: 40px;
 }
+
 .men {
     width: 18px;
     height: 19px;
     margin-left: 4%;
 }
+
 .women {
     width: 25px;
     height: 20px;
@@ -216,6 +233,7 @@
     transform: rotate(181deg);
     margin-top: -64%;
 }
+
 .arrow-top {
     margin-top: -24%;
 }
@@ -238,18 +256,22 @@
 .arrow-progra-right {
     transform: rotate(180deg);
 }
+
 .pencil {
     position: absolute;
     transform: translateY(-39%);
 }
+
 .pencil1 {
     position: absolute;
     transform: translate(200%, -14%);
 }
+
 .pencil2 {
     position: absolute;
     transform: translate(120%, -60%);
 }
+
 .subimage {
     position: absolute;
     width: 20px;
@@ -258,6 +280,7 @@
     border-radius: 1em;
     transform: translate(-10px, -14px);
 }
+
 .edi {
     width: 32px;
 }
@@ -266,14 +289,17 @@
     cursor: pointer;
     opacity: 0.7;
 }
+
 .imagethumb {
     width: 513px;
     height: 296px;
 }
+
 .imagevertical {
     width: 623px;
     height: 716px;
 }
+
 .imagesinop {
     width: 431px;
     height: 249px;
@@ -357,4 +383,25 @@
     top: 0;
     left: 50%;
     transform: translate(-50%, 150%);
+}
+
+.edit-image-icon {
+    width: 70px;
+    z-index: 1;
+}
+
+.arrow-right-programming,
+.arrow-left-programming {
+    top: 50%;
+    position: absolute;
+}
+
+.arrow-right-programming {
+    right: 0;
+    transform: translate(150%, -50%);
+}
+
+.arrow-left-programming {
+    left: 0;
+    transform: translate(-150%, -50%) rotate(180deg);
 }
