--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -1,4 +1,5 @@
 @import "../base/color";
+
 .loader-container {
     width: 100%;
     height: 100%;
@@ -11,6 +12,7 @@
     justify-content: center;
     border-radius: 15px;
 }
+
 .contenedor-tabla {
     display: table;
     overflow-x: scroll;
@@ -19,11 +21,13 @@
 
     //a-text-public
 }
+
 .conten-tab {
     //width: 500%;
     display: table;
     border-collapse: collapse;
 }
+
 .contenedor-table {
     display: table;
     overflow-x: scroll;
@@ -41,6 +45,7 @@
     white-space: nowrap;
     //a-textpublic
 }
+
 .contenedor-fila {
     display: table-row;
     height: 63px;
@@ -74,9 +79,11 @@
 .fondo {
     background: transparent;
 }
+
 .fondolog-reco {
     background: $white;
 }
+
 .contenido {
     position: absolute;
     left: 150px;
@@ -91,6 +98,7 @@
     padding-top: 4%;
     padding-bottom: 4%;
 }
+
 .login-container {
     height: 90vh;
     display: -webkit-box;
@@ -122,6 +130,7 @@
 .program {
     width: 40%;
 }
+
 .channel {
     width: 20%;
 }
@@ -129,6 +138,7 @@
 .cl {
     width: 925px;
 }
+
 .modaltam {
     width: 1485px;
     height: 600px;
@@ -171,16 +181,19 @@ iframe {
     #programar-home-publicacion {
         min-width: 312px;
     }
+
     #imagenes,
     #schedule-item-date-time,
     #subbed,
     #dubbed {
         min-width: 166px;
     }
+
     #schedule-item-date,
     #schedule-item-time {
         min-width: 170px;
     }
+
     #estimated-duration {
         min-width: 182px;
     }
@@ -217,16 +230,24 @@ iframe {
 }
 
 .date-modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 0px; /* Location of the box */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 0px;
+    /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(102, 101, 101); /* Fallback color */
-    background-color: rgba(102, 101, 101, 0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(102, 101, 101);
+    /* Fallback color */
+    background-color: rgba(102, 101, 101, 0.4);
+    /* Black w/ opacity */
 }
 
 .current-slide-container {
@@ -251,4 +272,8 @@ iframe {
     width: 100vw;
     opacity: 0.5;
     top: 0;
+}
+
+.dots-container {
+    width: 1000px;
 }
