--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -1,7 +1,20 @@
 @import "../base/color";
 
-.synopsis-image-slider {
+.synopsis-image-slider,
+.programming-slider {
     width: 1000px !important;
+}
+
+.programming-slider {
+    .slick-slide {
+        height: 342px !important;
+    }
+
+    .slick-slide {
+        div {
+            height: 100% !important;
+        }
+    }
 }
 
 .synopsis-image-slider {
