--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -364,3 +364,10 @@ input[type="radio"]:checked + .no-estilo1 {
     transform: rotate(45deg);
 }
 ///end class to selectpicker
+
+.edit-program-input {
+    background: transparent;
+    border: none;
+    padding: 0;
+    outline: none;
+}
