--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -5,6 +5,16 @@
     width: 1000px !important;
 }
 
+.calendar-slider {
+    height: 68px;
+}
+
+.calendar-slider {
+    div {
+        height: 100%;
+    }
+}
+
 .programming-slider {
     .slick-slide {
         height: 342px !important;
