--- a/resources/sass/base/_color.scss
+++ b/resources/sass/base/_color.scss
@@ -49,3 +49,6 @@ $warm-grey-three: #808080;
 $green: #15b643;
 $greyish-brown-two: #4a4a4a;
 $black-two: #2d2926;
+$brownish-grey-three: #5f5c5c;
+$black-three: #000000;
+$coolGray: #a7a8aa;
