--- a/resources/sass/organisms/_header.scss
+++ b/resources/sass/organisms/_header.scss
@@ -8,8 +8,8 @@ header {
     justify-content: center;
     align-items: center;
     box-shadow: 1px 0px 2px 1px $beige;
-  }
-  header {
+}
+header {
     grid-area: my-header;
     background-color: $darkred;
     display: flex;
@@ -17,5 +17,10 @@ header {
     align-items: center;
     color: $white;
     box-shadow: 1px 0px 2px 1px $beige;
-  }
-  
+}
+
+.thumbnail-header {
+    height: 100px;
+    background-color: $selecred;
+    width: 100%;
+}
