--- a/resources/sass/organisms/_section.scss
+++ b/resources/sass/organisms/_section.scss
@@ -1,6 +1,6 @@
 @import "../base/color";
 
-section {
+/*section {
     grid-area: my-section;
     background-color: $darkred;
     display: flex;
@@ -17,4 +17,4 @@ section {
     color: $white;
     width: 100%;
     box-shadow: 1px 0px 2px 1px $beige;
-  }
+  }*/
