--- a/resources/sass/organisms/_section.scss
+++ b/resources/sass/organisms/_section.scss
@@ -7,8 +7,8 @@
     justify-content: center;
     align-items: center;
     box-shadow: 1px 0px 2px 1px $beige;
-  }
-  section {
+  }*/
+.section {
     grid-area: my-section;
     background-color: $darkred;
     display: flex;
@@ -17,4 +17,4 @@
     color: $white;
     width: 100%;
     box-shadow: 1px 0px 2px 1px $beige;
-  }*/
+}
