--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -79,3 +79,14 @@
     align-items: center;
     justify-content: center;
 }
+
+.slider-pagination {
+    border: solid 3px $teal;
+    width: 37px;
+    height: 37px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+  
