--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -371,3 +371,11 @@ input[type="radio"]:checked + .no-estilo1 {
     padding: 0;
     outline: none;
 }
+.urls{
+    width: 246px;
+    height: 43px;
+    object-fit: contain;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+    background-color:white;
+    border:none;
+}
