--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -371,3 +371,11 @@ input[type="radio"]:checked + .no-estilo1 {
     padding: 0;
     outline: none;
 }
+
+.edit-program-textarea {
+    width: 100%;
+    height: 417px;
+    box-shadow: 0 7px 16px 0 rgba(0, 0, 0, 0.5);
+    resize: none;
+    border: none;
+}
