--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -952,3 +952,7 @@
     color:$teal ;
     font-family: $MontserratBlack;
   }
+  .slider-pagination-active{
+      background-color: $teal;
+
+    }
